--- a/sampleInc/src/about.html
+++ b/sampleInc/src/about.html
@@ -8,19 +8,19 @@
   <body>
     <header id="header">
       <div class="block__inner header__content">
-        <a class="header__logo" href="../">LOGO</a>
+        <a class="header__logo" href="./">LOGO</a>
 
         <div class="global-nav__wrap">
           <nav class="global-nav">
             <ul class="global-nav__list">
               <li class="global-nav__item">
-                <a class="global-nav__link" href="../#main">Main</a>
+                <a class="global-nav__link" href="./#main">Main</a>
               </li>
               <li class="global-nav__item">
-                <a class="global-nav__link" href="../#lead">Lead</a>
+                <a class="global-nav__link" href="./#lead">Lead</a>
               </li>
               <li class="global-nav__item">
-                <a class="global-nav__link" href="../#service">Service</a>
+                <a class="global-nav__link" href="./#service">Service</a>
               </li>
               <li class="global-nav__item">
                 <a class="global-nav__link" href="./about.html">About</a>
