--- a/sample-inc/src/about.html
+++ b/sample-inc/src/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sample.Inc</title>
+    <title>Sample Inc.</title>
   </head>
   <body>
     <header id="header">
@@ -101,7 +101,7 @@
 
     <footer>
       <div class="block__inner footer__cnt">
-        <p>&copy; 2020 Sample.Inc</p>
+        <p>&copy; 2020 Sample Inc.</p>
         <div class="footer__btn"><a class="footer__btn-top" href="#top">トップに戻る</a></div>
       </div>
     </footer>
