--- a/sample-inc/src/index.html
+++ b/sample-inc/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sample.Inc</title>
+    <title>Sample Inc.</title>
   </head>
   <body>
     <div class="loader__wrap">
@@ -57,7 +57,7 @@
     <main id="top">
       <section>
         <div class="mainvisual block__inner">
-          <h1 class="mainvisual__title">Sample.Inc</h1>
+          <h1 class="mainvisual__title">Sample Inc.</h1>
           <div class="canvas__wrap">
             <canvas class="canvas__item canvas__item--left" width="550" height="500"></canvas>
             <canvas class="canvas__item canvas__item--right" width="550" height="500"></canvas>
@@ -158,7 +158,7 @@
 
     <footer>
       <div class="block__inner footer__cnt">
-        <p>&copy; 2020 Sample.Inc</p>
+        <p>&copy; 2020 Sample Inc.</p>
         <div class="footer__btn"><a class="footer__btn-top" href="#top">トップに戻る</a></div>
       </div>
     </footer>
